2005-01-10  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/awt/AWTKeyStroke.java:
	Typed static cache and vktable generically
	(removeEldestEntry(Map.Entry<AWTKeyStroke,AWTKeyStroke>)):
	typed generically
	(registerSubclass(Class<?>)): typed generically
	(readResolve()): removed unnecessary cast
	(setFocusTraversalKeys(int, Set<? extends AWTKeyStroke>)):
	typed generically
	* java/awt/Container.java:
	(setFocusTraversalKeys(int, Set<? extends AWTKeyStroke>)):
	typed generically
	(getFocusTraversalKeys(int)): typed generically
	* java/awt/GridBagLayout.java:
	comptable, internalcomptable now generically typed
	(GridBagLayout()): generic typing
	(sortBySpan(Component,int,ArrayList<Component>,boolean)):
	typed generically
	* java/awt/KeyboardFocusManager.java:
	(getDefaultFocusTraversalKeys(int)): typed generically
	* java/awt/dnd/DragGestureRecognizer.java:
	typed events generically
	* java/awt/dnd/DropTargetContext.java:
	removed unnecessary import and added serialization UID
	* java/awt/im/InputContext.java:
	typed descriptors and recent generically
	* java/awt/im/spi/InputMethodContext.java:
	removed unnecessary import
	* java/io/DeleteFileHelper.java:
	filesToDelete typed generically
	(add(java.io.File)): typed generically
	(deleteFiles()): iteration changed to foreach
	* java/io/ObjectInputStream.java:
	typed objectLookupTable, validators, classLookupTable, oscs
	generically
	(resolveProxyClass(String[]): typed generically
	* java/io/ObjectOutputStream.java:
	removed unnecessary import
	typed OIDLookupTable generically
	* java/io/ObjectStreamClass.java:
	typed oscs and classLookupTable generically
	* java/io/ObjectStreamField.java:
	type typed generically
	(getType()): typed generically
	(checkFieldType()): typed generically
	* java/lang/Byte.java:
	(compareTo(Object)): removed as unneeded
	* java/lang/Character.java:
	(compareTo(Object)): removed as unneeded
	* java/lang/Class.java:
	Typing changed from K to T in accordance with docs