@@ -1,5 +1,17 @@
 2005-01-10  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* java/util/AbstractMap.java:
+	(putAll(Map<? extends K, ? extends V>)): added cast to
+	Map<K,V>
+	* java/util/EnumMap.java:
+	Corrected instanceof tests, generic array creation,
+	use of Enum.getDeclaringClass() and wrong typing
+	of iterator methods
+	(clone()): re-written to use the EnumMap(EnumMap)
+	constructor
+	
+2005-01-10  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* java/awt/AWTKeyStroke.java:
 	Typed static cache and vktable generically
 	(removeEldestEntry(Map.Entry<AWTKeyStroke,AWTKeyStroke>)):
